Align dropdown Features and Location filter for city right so it's not blocked and fix CSS for datepicker

--- a/client/templates/city/cityHeader/cityHeader.styl
+++ b/client/templates/city/cityHeader/cityHeader.styl
@@ -211,18 +211,7 @@
       display block
       margin 0 0 25px
       .form-control
-        margin 0 0 0 40px
-        display inline-block
-        height 34px
         width 120px
-        padding 6px 12px
-        font-size 14px
-        background-color #fff
-        background-image none
-        border 1px solid #ccc
-        border-radius 4px
-        box-shadow inset 0 1px 1px rgba(0,0,0,.075)
-        transition border-color ease-in-out .15s,box-shadow ease-in-out .15s
 
     .clear-btn
       padding 0 25px
