--- a/client/templates/index/index.styl
+++ b/client/templates/index/index.styl
@@ -300,5 +300,6 @@ blockquote
     .footer-section-btn
       color #4588fa
 
-
+#ui-datepicker-div 
+  z-index 9999 !important
 
