--- a/client/templates/popUp/contactUs/contactUs.styl
+++ b/client/templates/popUp/contactUs/contactUs.styl
@@ -1,7 +1,3 @@
-.modal-open
-  #ui-datepicker-div 
-    z-index 9999 !important
-
 .modal-dialog
   max-width 425px
   .contact-us-form
